--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,10 @@
 html{
     background-color:lightgrey;
 }
+body{
+    border:0px;
+    margin:0px;
+}
 #nav-bar{
     background-color:black;
     width:100%;
