--- a/ui/style.css
+++ b/ui/style.css
@@ -4,7 +4,11 @@ body{
 }
 nav{
     display : block;
-    text-decoration:none;
+   
     text-align:center;
+    
+}
+nav a{
+    text-decoration:none;
     color:white;
 }
