--- a/ui/style.css
+++ b/ui/style.css
@@ -12,4 +12,7 @@ nav a{
     text-decoration:none;
     color:white;
     border:1px solid white;
+    padding:5px;
+    border-collapse:collapse;
+    
 }
