--- a/ui/style.css
+++ b/ui/style.css
@@ -4,7 +4,11 @@ body{
     border:0px;
     margin:0px;
 }
-
+div{
+    display :block;
+    height:auto;
+    width:100%;
+}
 nav{
     display : block;
     border-collapse: collapse;
