--- a/ui/style.css
+++ b/ui/style.css
@@ -8,7 +8,7 @@ div{
     display :block;
     height:auto;
     width:100%;
-    background-color:black;
+    background-color:white;
     
 }
 nav{
