--- a/ui/style.css
+++ b/ui/style.css
@@ -14,7 +14,7 @@ nav{
     border-collapse: collapse;
     text-align:center;
     background-color:orange;
-   
+    padding:5px;
     }
 nav a{
     text-decoration:none;
