--- a/ui/style.css
+++ b/ui/style.css
@@ -1,8 +1,8 @@
 body{
     background-color:black;
     color:white;
-    border:0px;
-    margin:0px;
+    border:0;
+    margin:0;
 }
 div{
     display :block;
@@ -21,7 +21,7 @@ nav a{
     color:white;
     border:1px solid white;
     padding:5px;
-    margin:0px;
-    
+    margin:0;
+    border-spacing:0;
     
 }
