--- a/ui/style.css
+++ b/ui/style.css
@@ -8,20 +8,24 @@ div{
     display :block;
     height:auto;
     
-    }
+}
 nav{
     display : block;
     border-collapse: collapse;
     text-align:center;
     background-color:orange;
     padding:10px;
-    }
+    
+}
 nav a{
     text-decoration:none;
     color:white;
     border:1px solid white;
     padding:5px;
     margin:0;
-    border-spacing:0;
     
+}
+nav a:hover{
+    background-color:black;
+    color:white;
 }
