--- a/ui/style.css
+++ b/ui/style.css
@@ -29,4 +29,5 @@ nav a:hover{
     background-color:black;
     color:white;
     text-transform:uppercase;
+    font-family:"Lucida Console", Monaco, monospace;
 }
