[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -37,5 +37,5 @@ img{
     width:450px;
     border:2px solid orange;
     border-radius:8px;
-    box-shadow:2px 2px 2px 2px orange;
+    box-shadow:2px 2px 2px 2px white;
 }
