--- a/ui/style.css
+++ b/ui/style.css
@@ -35,7 +35,7 @@ nav a:hover{
 img{
     height:450px;
     width:450px;
-    border:2px solid orange;
+    border:2px solid white;
     border-radius:8px;
     box-shadow:1px 1px 1px 1px white;
 }
