[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -40,6 +40,9 @@ img{
     box-shadow:1px 1px 1px 1px white;
     float:left;
 }
+.profile-pic{
+    float:left;
+}
 .profile-data{
     border:2px solid white;
 }
