--- a/ui/style.css
+++ b/ui/style.css
@@ -48,6 +48,6 @@ nav a:hover{
     margin-left:500px;
     text-align:center;
     padding-top:50px;
-    font-family:"Goudy Bookletter 1911", sans-serif;
+    font-family:cursive;
     
 }
