[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -49,6 +49,5 @@ nav a:hover{
     text-align:center;
     padding-top:50px;
     font-family:cursive;
-    text-size:medium;
-    
+    font-size:x-large;
 }
