[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -3,6 +3,7 @@ body{
     color:white;
     border:0;
     margin:0;
+    background-image:url("http://vignette3.wikia.nocookie.net/steamtradingcards/images/3/36/Circuits_Profile_Background_Dream.jpg");
 }
 div{
     display :block;
