[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -3,7 +3,7 @@ body{
     color:white;
     border:0;
     margin:0;
-    background-image:url("http://vignette3.wikia.nocookie.net/steamtradingcards/images/3/36/Circuits_Profile_Background_Dream.jpg");
+    background-image:url("http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/307170/4cbb91e30c91152c0b3bc1ce2f3e46e125ab6042.png");
 }
 div{
     display :block;
