[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -3,7 +3,7 @@ body{
     color:white;
     border:0;
     margin:0;
-    background-image:url("http://media02.hongkiat.com/wildlife_wallpapers/tiger_wallpaper.jpg");
+    background-image:url("http://images.akamai.steamusercontent.com/ugc/493519450183077598/ED42789B4B4564925B760874F42E05525CEAC9D1/");
 }
 div{
     display :block;
