[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -49,6 +49,6 @@ nav a:hover{
     margin-left:500px;
     text-align:center;
     padding-top:50px;
-    font-family:'BoycottRegular';
+    font-family:cursive;
     font-size:x-large;
 }
