--- a/ui/style.css
+++ b/ui/style.css
@@ -54,5 +54,6 @@ nav a:hover{
 }
 .blog{
     margin:125px;
-    border:1px 1px 1px 1px solid white;
+    border:1px solid white;
+    height:300px;
 }
