--- a/ui/style.css
+++ b/ui/style.css
@@ -53,7 +53,11 @@ nav a:hover{
     font-size:x-large;
 }
 .blog{
-    margin:125px;
     border:1px solid white;
-    height:300px;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 25px;
+    height: 500px;
+
 }
