--- a/ui/style.css
+++ b/ui/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color:black;
-    color:white;
+    background-color:white;
+    color:black;
     border:0;
     margin:0;
-    background-image:url("http://images.akamai.steamusercontent.com/ugc/493519450183077598/ED42789B4B4564925B760874F42E05525CEAC9D1/");
+    
     height:100%;
 }
 div{
