--- a/ui/style.css
+++ b/ui/style.css
@@ -66,8 +66,8 @@ nav a:hover{
 }
 
 .socialMedia img{
-    height:25px auto;
-    width:25px auto;
+    height:25px;
+    width:25px;
     display:block;
     
 }
